cmake_minimum_required(VERSION 3.20.0)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(discord-vc-pfps)

set(ENABLE_PROGRAMS OFF)
add_subdirectory(mbedtls)
set(MBEDTLS_FOUND ON)
set(MBEDTLS_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/mbedtls/include)
set(MBEDTLS_VERSION_GREATER_THAN_3 mbedtls/build_info.h)
set(MBEDTLS_LIBRARY mbedtls)
set(MBEDX509_LIBRARY mbedx509)
set(MBEDCRYPTO_LIBRARY mbedcrypto)
set(MBEDTLS_LIBRARIES "${MBEDTLS_LIBRARY}" "${MBEDX509_LIBRARY}" "${MBEDCRYPTO_LIBRARY}")

set(USE_TLS ON)
set(IXWEBSOCKET_INSTALL OFF)
add_subdirectory(IXWebSocket)
target_compile_definitions(ixwebsocket PRIVATE IXWEBSOCKET_USE_MBED_TLS_MIN_VERSION_3)
file(GLOB_RECURSE IX_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/IXWebSocket/ixwebsocket/*.h")
file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/include")
file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/include/ixwebsocket")
file(COPY ${IX_HEADER_FILES} DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/include/ixwebsocket")

set(S2D_BUILD_EXAMPLES OFF)
add_subdirectory(simple-2d)

file(GLOB_RECURSE src src/*.cpp)
add_executable(discord-vc-pfps ${src})
target_link_libraries(discord-vc-pfps PRIVATE simple-2d)
target_link_libraries(discord-vc-pfps PRIVATE ixwebsocket)
target_include_directories(discord-vc-pfps PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/include)
target_include_directories(discord-vc-pfps PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/rapidjson/include)
